halfway through integrating the music part (in theory, since i can't test it on my computer due to Reasons)

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>test webapp</title>
+    <title>LyricLearner</title>
 </head>
 <body>
     <h1>just so i know this works</h1>
 
-    <form method="post">
+    <form method="post" action="/choices">
 
         <p>Which nursery rhyme would you want?</p>
 
         <select name="nursery_rhyme" id="nursery_rhyme">
             <option value="london"> London Bridge is Falling Down</option>
             <option value="twinkle"> Twinkle Twinkle Little Star</option>
-            <option value="ants"> The Ants are Marching One by One</option>
+            <!-- <option value="ants"> The Ants are Marching One by One</option> -->
             <option value="frere"> Are You Sleeping Brother John</option> 
             <option value="weasel"> Pop Goes The Weasel</option>
         </select>
