--- a/webapp/templates/intermediate.html
+++ b/webapp/templates/intermediate.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Make a choice</title>
+    <title>LyricLearn</title>
+    <link rel="stylesheet" href="static\design2.css">
 </head>
 <body>
-    <h1>which one of these is the most useful?</h1>
-
+    <section id="banner">
+        <h1>LyricLearn</h1>
+        <h2>Choose the best lyrics: </h2>
+    </section>
+    
+    
     <!-- <ol>
         {% for resp in response%}
         <li > {{resp}} </li>
         {%endfor%}
     </ol> -->
 
-    <form action="/audio" method="POST">
-        <span style="white-space: pre-line" >
+    <form id='form' action="/audio" method="POST">
+        <span id='span'>
             {% for num in seq%}
             <input type="radio" value={{num}} name="which_one"> {{response[num]}} </input>
             {%endfor%}
@@ -22,5 +27,10 @@
         <button type="submit">Submit</button>
     </form>
 
+
+    <button type="button" onClick="window.location.reload()">
+        Regenerate Choices
+     </button>
+    
 </body>
 </html>
